--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,4 +1,4 @@
 <footer>
     <p>from partial - Copyright {{getCurrentYear}}</p>
-    <p><a href="/">Home</a> &nbsp;&nbsp; <a href="/about">About</a></p>
+    <p><a href="/">Home</a> &nbsp;&nbsp; <a href="/about">About</a> &nbsp;&nbsp; <a href="/projects">Projects</a></p>
 </footer>
